--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/card": "^2.2.25",
+    "@heroui/react": "^2.8.5",
+    "framer-motion": "^12.23.24",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
